--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
+    "apexcharts": "^3.33.0",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-query": "^3.34.12",
     "react-router-dom": "^5.3.0",
