--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.3",
     "apexcharts": "^3.33.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.34.12",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
