--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^5.0.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.25.3",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/styled-components": "^5.1.21"
   }
 }
